--- a/registrar/registrar.html
+++ b/registrar/registrar.html
@@ -16,7 +16,9 @@
         <div id="formContent">
             <!-- Logo -->
             <div class="fadeIn first">
-                <img src="./logo.png" id="icon" alt="User Icon" />
+                <a href="../landing/index.html">
+                    <img src="./logo.png" id="icon" alt="User Icon" />
+                </a>
             </div>
 
             <form action="" class="sky-form" />
